# chess

./: .gitmodules  Buffer.h  Buffer_ut.cpp  CMakeLists.txt  DataTables.cpp  DataTables.h  DataTables2.h  DataTables4.cpp  DataTables4.h  DataTables_ut.cpp  EngineInputs.cpp  EngineInputs.h  EngineOutputs.cpp  EngineOutputs.h  HashTable.h  HashTable_ut.cpp  Homepage of Albert Bertilsson.html  Issues  Makefile  README.md  SharedData.cpp  SharedData.h  SharedData_ut.cpp  StateMachine.cpp  StateMachine.h  StateMachine2.cpp  StateMachine2.h  StateMachine3.cpp  StateMachine3.h  StateMachine_ut.cpp  WORKSPACE  chess.cpp  chess.h  chess4.h  chess_util.h  clock.h  cmd.cpp  cmd.h  cmd_ut.cpp  engine.cpp  (+33 more)
CommandLine/: BUILD  CommandLine.cpp  CommandLine.h  CommandLine_ut.cpp
Homepage of Albert Bertilsson_files/: black(1).html  black(2).html  default.html  home.html  main(1).html  main.html  nav(1).html  nav.html  show_ads.js  style(1).css  style.css
ReadEventSink/: README.md  doxygen_config
ReadEventSink/include/: ReadEventSink.h
ReadEventSink/src/: Makefile  ReadEventSink.cpp  ReadEventSink_ut.cpp
abort/: BUILD  README.md  abort.h
bench/: BUILD  bench.cpp  bench4.cpp
exec/: BUILD  main.cpp
include/chess/: attacks.h  chess.h  command_dispatcher.h  data_buffer.h  data_tables.h  debug.h  engine.h  engine_interface.h  evaluate.h  file_stream.h  interactive.h  logger.h  memory_pool.h  movegen.h  movelist.h  mtcs.h  null_stream_channel.h  position.h  search.h  static_exchange.h  stdio_channel.h  stream_channel.h  uci.h  util.h
include/chess/private/: data_tables_internal.h
io_tools/: BUILD
io_tools/Fd/: Fd.cpp
old/: DataTables.h  Position.h  abort.h  cmd.cpp  cmd.h  cmd2.h  cmd_ut.cpp  cmd_ut2.cpp  engine.h  types.h  util.h
perft/: BUILD  main.cpp  perft.cpp  perft.h
scripts/: generate_tables.py
signal/: Signal.h
src/: BUILD  DataTables4.cpp  DataTables4.h  FdChannel.cpp  FdChannel.h  FdInputHandler.cpp  FdInputHandler.h  HashTable.h  MoveGen4.h  MoveList.h  OutputChannel.cpp  OutputChannel.h  OutputSource.cpp  OutputSource.h  Position4.cpp  Position4.h  Search4.cpp  Search4.h  SearchPhase.h  SelectionSort.h  Timer.cpp  Timer.h  Variation.cpp  Variation.h  Verbosity.h  chess.cc  chess4.cpp  chess4.h  chess_util4.h  clock.h  command_dispatcher.cc  command_handler.cpp  command_handler.h  command_interface.cpp  command_interface.h  data_buffer.cc  data_tables.cc  debug.cc  engine.cc  engine.cpp  (+34 more)
test/: data_tables_ut.cc  logger_ut.cc  main.cc  memory_pool_ut.cc  movegen_ut.cc  mtcs_ut.cc  position_ut.cc  static_exchange_ut.cc  stdio_channel_exe.cc  stdio_channel_ut.cc  stream_channel_ut.cc
types/: BUILD  README.md  types.h
ut/: BUILD  DataTables_ut.cpp  MoveGen_ut.cpp  Position_ut.cpp  search_ut.cpp  see_ut.cpp  selection_sort_ut.cpp
util/: BUILD  Buffer.h
util/abort/: BUILD  abort.h
